# ELFAutomations

./: .env.example  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  =0.1.80  =0.2.0  =0.3.0  AGENTGATEWAY_UPGRADE_SUMMARY.md  API_KEY_VERIFICATION_REPORT.md  CLAUDE.md  CONTEXT-AS-A-SERVICE-USE.md  ELF_UI_TEMPLATE_MEMORY.md  FIX_NESTED_K8S.sh  K8S_STRUCTURE_FIX_SUMMARY.md  MAC_MINI_NEXT_STEPS.md  MEMORY_EVOLUTION_CHECKPOINT.md  MEMORY_EVOLUTION_IMPLEMENTATION.md  Makefile  N8N_INTEGRATION_PHASE1_COMPLETE.md  N8N_QUICK_REFERENCE.md  PRECOMMIT_FIX_GUIDE.md  PROJECT_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  PROJECT_MANAGEMENT_SESSION_CHECKPOINT.md  PROJECT_STRUCTURE.md  QUICK_COMMIT.sh  README.md  SAFE_COMMIT.sh  SESSION_CHECKPOINT_MEMORY_SYSTEM_READY.md  SESSION_CHECKPOINT_TASK_12_READY.md  SESSION_CONTEXT_2025_01_06.md  SESSION_CONTEXT_N8N_INTEGRATION.md  SESSION_CONTEXT_N8N_WORKFLOW_FACTORY.md  SESSION_MEMORY_2025_01_20.md  SESSION_MEMORY_RAG_SYSTEM_2025_01_20.md  SESSION_MEMORY_SYSTEM_COMPLETE.md  SESSION_PROGRESS_SUMMARY_JAN_2025.md  SESSION_PROGRESS_SUMMARY_JUNE_2025.md  TEAM_FACTORY_PROGRESS.md  check_env_files.sh  (+32 more)
.github/: dependabot.yml
a2a_gateway/: Dockerfile  README.md  requirements.txt
agent-configs/: extraction_summary.json
agents/: __init__.py  base.py  demo_agent.py  langgraph_base.py  registry.py
apis/: __init__.py  main.py
config/: mcp_config.json
context-as-a-service/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
dashboard/: README.md  docker-compose.yml  start-dashboard.sh
database/: diagnose_project_tables.sql  enable_rag_rls.sql  grant_rag_permissions.sql  test_projects_minimal.sql  verify_rag_schema.sql
docker/: agentgateway.Dockerfile  chief-ai-agent.Dockerfile  mock-autogen-server.js  mock-autogen.Dockerfile
docs/: A2A_ARCHITECTURE_GUIDE.md  AGENT-DESIGN-PATTERN.md  AGENTGATEWAY_CONFIGURATION_PLAN.md  AGENTGATEWAY_REMOTE_ACCESS.md  AGENTGATEWAY_UPGRADE_STATUS.md  AGENT_EVOLUTION_INTEGRATION_GUIDE.md  AGENT_VS_MCP_GUIDELINES.md  AI Team Culture Patterns.md  AI Team Size Patterns.md  ARCHITECTURE_CLARIFICATION_001.md  ARGOCD_SYNC_TROUBLESHOOTING.md  AUTONOMOUS_PROJECT_FLOW.md  AUTONOMOUS_TEAM_CREATION_ARCHITECTURE.md  AUTONOMY_FIX_PLAN.md  AUTONOMY_PROGRESS_INDEX.md  Agent Design Pattern V2.md  BUSINESS_OPERATING_SYSTEM.md  CEO_REQUEST_FLOW.md  CI_CD_PIPELINE.md  CI_CD_SETUP.md  CONSTRUCTION_PM_ACTION_PLAN.md  CONTROL_CENTER_ARCHITECTURE.md  CONTROL_CENTER_DEPLOYMENT.md  CONTROL_CENTER_GUIDE.md  COST_MONITORING_GUIDE.md  CREDENTIAL_MANAGEMENT_ANALYSIS.md  CREDENTIAL_MANAGEMENT_PLAN.md  CREDENTIAL_RECOVERY_GUIDE.md  CREDENTIAL_SYSTEM_OVERVIEW.md  CREWAI-MULTI-CREW-PATTERN.md  CREW_A2A_INTEGRATION_PATTERN.md  CURRENT_ARCHITECTURE.md  CURRENT_DEPLOYMENT_INVENTORY.md  DATABASE_MIGRATION_GUIDE.md  DEVOPS_TEAM_WORKFLOW_EXAMPLE.md  EFFECTIVENESS_MEASUREMENT_SYSTEM.md  ELFAUTOMATIONS_BUILD_PLAN.md  ELFAUTOMATIONS_PLATFORM_OVERVIEW.md  ELF_ECOSYSTEM_ROADMAP.md  ELF_UI_DESIGN_SYSTEM.md  (+114 more)
elf_automations/: __init__.py
examples/: ai_workflow_demo.py  n8n_integration_example.py  pattern_workflow_demo.py  sample_n8n_workflow.json  workflow_factory_demo.py
mcp/: CONSOLIDATION_SUMMARY.md  README.md
mcp-servers-ts/: package.json
mcp_servers/: base.py  business_tools.py
monitoring/: dashboard-import.json  prometheus-config-updated.yml  prometheus-config.yml  setup-monitoring.sh
n8n/: workflow_registration.py
n8n_docs/: ClaudeProjectWorkflow.md  ClaudeProjectWorkflow.xml  FirstTask.txt
old/: LargeLangGraph-v1
reports/: business_intelligence_supabase.md  executive_summary_supabase_demo.md
scripts/: EXTRACT_CONTEXT_SERVICE_README.md  UPDATE_TEAMS_README.md  add_missing_creds.py  build-executive-team.sh  build_google_drive_watcher.sh  check-deployment-status.sh  check-infrastructure-status.sh  check-mac-mini-status.sh  check_existing_tables.py  check_k8s_status.sh  check_registry_via_mcp.py  check_team_registry_direct.py  check_team_registry_tables.py  cleanup-shadow-apps.sh  cleanup-teams-to-minimal.sh  cleanup_project_structure.py  configure_supabase_env.py  control_center_status.sh  cost_analytics.py  cost_optimizer.py  create-elf-app.sh  create-infrastructure-argocd-app.sh  create-n8n-argocd-app.sh  create-n8n-simple-app.yaml  create_memory_tables_manual.py  create_schema_execute_sql.py  create_schema_via_mcp.py  create_schema_via_mcp_fixed.py  create_supabase_tables.py  create_tables_mcp_direct.py  create_tables_with_mcp.py  debug-argocd-app.sh  demo.py  demo_workflow_import_export.py  deploy-n8n.sh  deploy_to_gitops.sh  (+122 more)
(+898 files in other folders)
